--- a/app/src/main/res/menu/alarm_menu.xml
+++ b/app/src/main/res/menu/alarm_menu.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
@@ -10,9 +9,9 @@
 
 
     <item
-        android:id="@+id/set_alarm"
-        android:icon="@android:drawable/ic_lock_idle_alarm"
-        android:title="Set Alarm"
+        android:id="@+id/home_page"
+        android:icon="@mipmap/ic_launcher_round"
+        android:title="Home"
         app:showAsAction="always" />
 
     <item
