--- a/app/src/main/res/layout/activity_colour.xml
+++ b/app/src/main/res/layout/activity_colour.xml
@@ -20,8 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Clock Colours"
             android:fontFamily="@font/font_fam"
+            android:text="Clock Colours"
             android:textSize="30sp" />
 
         <Spinner
@@ -29,8 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="76dp"
             android:layout_margin="5dp"
-            android:fontFamily="@font/font_fam"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:fontFamily="@font/font_fam" />
     </LinearLayout>
 
     <LinearLayout
@@ -45,8 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Background Colours"
             android:fontFamily="@font/font_fam"
+            android:text="Background Colours"
             android:textSize="30sp" />
 
         <Spinner
@@ -58,14 +58,21 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button3"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_weight=".05"
-        android:fontFamily="@font/font_fam"
-        android:background="@drawable/buttonshape"
-        android:text="Change Colours!" />
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/buttonshape"
+            android:fontFamily="@font/font_fam"
+            android:text="Change Colours!" />
+    </LinearLayout>
 
 </LinearLayout>
